@@ -34,6 +34,7 @@ Version 1.0.8.11
      * Further improvements to ASM language file to introduce all latest
        already documented x86 architecture instructions (Marat Dukhan)
      * Fixed links for R/S+ language file (Fernando H.F.P. da Rosa)
+     * Fix a problem with Delphi/Pascal regarding hex numbers/chars (BenBE)
 Version 1.0.8.10
   -  Added language files
      * BASCOM AVR (Michal Goralczyk)
